--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: 物の哀れ
 description: 残垣今又来， 彼姝安在哉？ 唯见萋萋处， 寂寞堇花开。
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://raw.githubusercontent.com/retrcult/retrcult.github.io/master/images/logo.png
 
 #
 # Flags below are optional
