--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 name: 物の哀れ
 
 # Short bio or description (displayed in the header)
-description: 残垣今又来， 彼姝安在哉？ 唯见萋萋处， 寂寞堇花开。
+description: .
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/retrcult/retrcult.github.io/master/images/logo.png
+avatar: /images/logo.png
 
 #
 # Flags below are optional
