--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: 物の哀れ
+name:
 
 # Short bio or description (displayed in the header)
-description: .
+description:
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/logo.png
@@ -48,6 +48,8 @@ url:
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
 baseurl: ""
+encoding: utf-8
+timezone: Asia/Shanghai
 
 #
 # !! You don't need to change any of the configuration flags below !!
@@ -56,6 +58,16 @@ baseurl: ""
 markdown: redcarpet
 highlighter: pygments
 permalink: /:title/
+
+excerpt_separator: <!--more-->
+
+# paginate: 5
+
+pages_list:
+  About: '/about'
+  Archive: '/archive'
+  Tags: '/tags'
+  Feed: '/atom.xml'
 
 # The release of Jekyll Now that you're using
 version: v1.1.0
